common-210: * fix conflicts and fix bug with z-index of sign-in modal

--- a/frontend/src/pages/video/channel-info-row/styles.module.scss
+++ b/frontend/src/pages/video/channel-info-row/styles.module.scss
@@ -1,3 +1,5 @@
+@use 'assets/css/config';
+
 .wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -13,6 +15,7 @@
   position: absolute;
   top: 120%;
   right: 0;
+  z-index: config.$modal-z-index;
   width: 200px;
 }
 
